--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                     <button class="btn-2"> Decline </button>
                 </div>
 
+                <div class="divider-2"></div>
+
                 <div class="profile-info-2">
                     <div class="profile"> <img src="https://images.unsplash.com/photo-1595152772835-219674b2a8a6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=580&q=80" alt=""></div>
                 <div><p>Lorem ipsum <b>dolor sit</b> amet consectetur <b>adipisicing</b> elit.</p>
